@@ -18,18 +18,20 @@ LICENSE="GPL-3"
 SLOT="0"
 [[ ${PV} == *9999* ]] || \
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux"
-IUSE="+alsa aqua bluray bs2b +cdio dvb +dvd +enca encode fbcon +iconv jack
-joystick jpeg ladspa lcms +libass libcaca libguess lirc mng +mp3 -openal +opengl
-oss portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads v4l vcd
-vdpau vf-dlopen wayland +X xinerama +xscreensaver +xv"
+IUSE="+alsa aqua bluray bs2b +cdio dvb +dvd +enca encode +iconv jack joystick
+jpeg ladspa lcms +libass libcaca libguess lirc mng +mp3 -openal +opengl oss
+portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads v4l vcd vdpau
+vf-dlopen wayland +X xinerama +xscreensaver +xv"
 
 REQUIRED_USE="
 	enca? ( iconv )
 	lcms? ( opengl )
 	libguess? ( iconv )
 	opengl? ( || ( aqua wayland X ) )
+	portaudio? ( threads )
 	pvr? ( v4l )
 	radio? ( v4l || ( alsa oss ) )
+	v4l? ( threads )
 	vdpau? ( X )
 	wayland? ( opengl )
 	xinerama? ( X )
@@ -91,7 +93,10 @@ RDEPEND+="
 		media-libs/mesa[egl,wayland]
 		>=x11-libs/libxkbcommon-0.3.0
 	)
-	|| ( >=media-video/libav-9[encode?,threads?,vdpau?] >=media-video/ffmpeg-1.2[encode?,threads?,vdpau?] )
+	|| (
+		>=media-video/libav-9[encode?,threads?,vdpau?]
+		>=media-video/ffmpeg-1.2[encode?,threads?,vdpau?]
+	)
 "
 ASM_DEP="dev-lang/yasm"
 DEPEND="${RDEPEND}
@@ -108,7 +113,7 @@ DEPEND="${RDEPEND}
 	x86? ( ${ASM_DEP} )
 	x86-fbsd? ( ${ASM_DEP} )
 "
-DOCS=( AUTHORS Copyright README.md etc/example.conf etc/input.conf )
+DOCS=( AUTHORS Copyright README.md etc/example.conf etc/input.conf etc/encoding-example-profiles.conf )
 
 pkg_setup() {
 	if [[ ${PV} == *9999* ]]; then
